--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
+<html>
+    <body>
 <h1>hello</h1>
+<p>This is a website.
+<br>
+    <i>It is a bad one.</i>
+    <img src="oldcomputer.jpg" alt="oldcomputer">
+
+
+<a href="second.html"></a>
+<body>
+  </html>  
